--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,14 @@
+2026-02-25 Version: v2.3.0
+- Support API AssociateParameterSet.
+- Support API CreateParameterSet.
+- Support API DeleteParameterSet.
+- Support API DissociateParameterSet.
+- Support API GetParameterSet.
+- Support API ListParameterSetRelation.
+- Support API ListParameterSets.
+- Support API UpdateParameterSetAttribute.
+
+
 2026-01-21 Version: v2.2.0
 - Support API ManageTerraformState.
 
