--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+2026-02-26 Version: v2.4.0
+- Support API ListResources.
+
+
 2026-02-25 Version: v2.3.0
 - Support API AssociateParameterSet.
 - Support API CreateParameterSet.
